tests/errors/type_mismatch_division.dang
# Test division type mismatch
let result = "hello" / 42
